--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -46,7 +46,7 @@
                             <div class="row align-items-center mb-4">
                                 <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
                                     <div class="date-picker">
-                                        <input id="monthValue" (ngModelChange)="filterByMonth($event)"
+                                        <input id="monthValue"
                                             value="january 2020" class="date-field" name="monthValue"
                                             [(ngModel)]="monthValue" [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                             (onShown)="onOpenCalendar($event)" type="text" bsDatepicker />
@@ -259,7 +259,7 @@
                                 </div>
                             </div>
                             <div class="Check-reconcile-btn">
-                                <button class="btn btn-brand" (click)="reconcileCheck()">Check as Reconciled</button>
+                                <button class="btn btn-brand" >Check as Reconciled</button>
                             </div>
                         </div>
                     </div>
