--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -32,7 +32,7 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h5 class="text-navyblue">{{taskName}}</h5>
+                                    <h5 class="text-navyblue"></h5>
                                 </div>
                             </div>
                             <div class="row">
@@ -111,15 +111,6 @@
                                 
 
 
-                            </div>
-                            <div class="row" *ngIf="instruction == null">
-                            </div>
-
-                            <div class="row" *ngIf="instruction != null">
-                                <div class="col-md-12">
-
-                                    <div class="custom-text-area" innerHTML="{{instruction}} "></div>
-                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
