--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -132,8 +132,10 @@
                                         <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}">
                                         </p-editor>
+                                        <div class="btnMargin" >
                                         <button class="btn btn-brand" (click)="onComment()">Comment</button>
                                         <button class="btn btn-brand" (click)="onCancelComment()">Cancel</button>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
