--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -56,7 +56,7 @@
                                             [(ngModel)]="getTaskForEdit.taskName">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div [ngClass]="{'disabled':!monthStatus}" class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
                                         <app-user-list-component disable = "true" comingChangeReguest="" userId={{assigneeId}}>
@@ -105,7 +105,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group giveCommentView" *ngIf="!commantBox">
+                                    <div [ngClass]="{'disabled':!monthStatus}"  class="form-group giveCommentView" *ngIf="!commantBox">
                                         <label>Comments</label>
                                         <div (click)="commentClick()">
                                             <div class="kt-user-card-v2">
@@ -127,7 +127,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group " *ngIf="commantBox">
+                                    <div class="form-group giveCommentView"  *ngIf="commantBox">
                                         <label>Comments</label>
                                         <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}">
@@ -239,7 +239,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="drag_drop_box">
+                            <div [ngClass]="{'disabled':!monthStatus}" class="drag_drop_box">
                                 <label>Attachments</label>
                                 <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)">
                                 </ng-uppy>
