--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -85,7 +85,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group giveCommentView" *ngIf="commantBox">
+                            <div [ngClass]="{'disabled':!monthStatus}"class="form-group giveCommentView" *ngIf="commantBox">
                                 <label>Comments</label>
                                 <div (click)="commentClick()">
                                     <div class="kt-user-card-v2">
@@ -108,9 +108,9 @@
                                 </div>
                             </div>
 
-                            <div class="form-group " *ngIf="!commantBox">
+                            <div class="form-group "  *ngIf="!commantBox">
                                 <label>Comments</label>
-                                <p-editor [(ngModel)]="comment.body" name="HtmlEditorInput"
+                                <p-editor [disabled]="!taskDetailObject.monthStatus" [(ngModel)]="comment.body" name="HtmlEditorInput"
                                     [style]="{'height':'150px'}">
                                 </p-editor>
                                 <div class="btnMargin" >
@@ -122,13 +122,13 @@
                         </div>
                         <div class="col-md-5">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div [ngClass]="{'disabled':!monthStatus}" class="col-md-4">
                                     <app-user-list-component (callBack)="updateDetails()" taskId={{recordId}}
                                         comingChangeReguest="DetailsClosingCheckList"
                                         userId={{taskDetailObject.assigneeId}}></app-user-list-component>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="">
+                                    <div [ngClass]="{'disabled':!monthStatus}">
                                         <app-status [TaskId]="recordId" [StatusList]=taskDetailObject.taskStatus>
                                         </app-status>
 
@@ -146,9 +146,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="drag_drop_box">
+                                    <div [ngClass]="{'disabled':!monthStatus}" class="drag_drop_box">
                                         <label>Attachments</label>
-                                        <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)">
+                                        <ng-uppy  [config]="settings" (uploadResult)="fileUploadedResponse($event)">
                                         </ng-uppy>
                                         <div *ngFor="let item of attachments" class="attachments_section">
                                             <a href="{{item.attachmentUrl}}" target="_blank" class="attachement_btn"
